BGDIINF_SB-2021: remove '/shortlinks'
